--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,6 @@ services:
       ports: 
         - "5432:5432"
       environment:
-        POSTGRES_USER: root
-        POSTGRES_PASSWORD: secret
+       - POSTGRES_USER=${DB_USER}
+       - POSTGRES_PASSWORD=${DB_PASSWORD}
+       
