--- a/config/database.yml
+++ b/config/database.yml
@@ -9,8 +9,8 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
   host: localhost
-  username: <%= ENV['DEMO_ARS_DATABASE_USER'] %>
-  password: <%= ENV['DEMO_ARS_DATABASE_PASSWORD'] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
 
 development:
   <<: *default
@@ -30,5 +30,7 @@ production:
   adapter: postgresql
   encoding: utf8
   database: demo_ars_production
+  username: <%= ENV['DEMO_ARS_DATABASE_USER'] %>
+  password: <%= ENV['DEMO_ARS_DATABASE_PASSWORD'] %>
   pool: 5
 
